<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tag">

    <fragment
        android:id="@+id/navigation_tag"
        android:name="com.example.a7mengineering.ui.LocationTag.LocationTagFragment"
        android:label="@string/title_tag"
        tools:layout="@layout/fragment_tag" />
    <fragment
        android:id="@+id/navigation_location_tag"
        android:name="com.example.a7mengineering.ui.Tag.TagFragment"
        android:label="@string/title_location_tag"
        tools:layout="@layout/fragment_location_tag" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.a7mengineering.ui.Tag.TagFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

</navigation>