<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1">

    <!--    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />-->
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bajsikl"
        app:civ_border_color="#EEEEEE"
        app:civ_border_width="4dp"


        app:civ_shadow="true"
        app:civ_shadow_radius="10"
        app:civ_shadow_color="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_two_dots"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="235dp" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="235dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_two_dots"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="235dp" />

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="235dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="64dp"
                tools:layout_editor_absoluteY="277dp" />

            <TextView
                android:id="@+id/profile_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Niko ga nece"
                android:textSize="22sp"
                tools:layout_editor_absoluteX="143dp"
                tools:layout_editor_absoluteY="235dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/change_password"
                android:layout_height="match_parent"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                />

            <Button
                android:id="@+id/sign_out"
                android:layout_height="match_parent"
                android:text="@string/logout"
                android:textAlignment="center"
                android:layout_weight="0.5"
                android:layout_width="0dp"/>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>